codestyle changes