@@ -2,9 +2,9 @@ package ru.hse.sportclassbookingbackend.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import ru.hse.sportclassbookingbackend.dto.student_group.StudentGroupPatchRequest;
-import ru.hse.sportclassbookingbackend.dto.student_group.StudentGroupRequest;
-import ru.hse.sportclassbookingbackend.dto.student_group.StudentGroupResponse;
+import ru.hse.sportclassbookingbackend.dto.studentgroup.StudentGroupPatchRequest;
+import ru.hse.sportclassbookingbackend.dto.studentgroup.StudentGroupRequest;
+import ru.hse.sportclassbookingbackend.dto.studentgroup.StudentGroupResponse;
 import ru.hse.sportclassbookingbackend.exception.NotFoundException;
 import ru.hse.sportclassbookingbackend.mapper.StudentGroupMapper;
 import ru.hse.sportclassbookingbackend.model.StudentGroup;
@@ -12,12 +12,13 @@ import ru.hse.sportclassbookingbackend.repository.StudentGroupRepository;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class StudentGroupServiceImpl implements StudentGroupService {
+
     private final StudentGroupRepository studentGroupRepository;
+
     private final StudentGroupMapper studentGroupMapper;
 
     @Override
@@ -25,7 +26,7 @@ public class StudentGroupServiceImpl implements StudentGroupService {
         return studentGroupRepository.findAll()
                 .stream()
                 .map(studentGroupMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -35,7 +36,8 @@ public class StudentGroupServiceImpl implements StudentGroupService {
 
     @Override
     public StudentGroupResponse patch(UUID id, StudentGroupPatchRequest request) {
-        StudentGroup studentGroup = studentGroupRepository.findById(id).orElseThrow(() -> new NotFoundException("Student group with id: " + id + " not found"));
+        StudentGroup studentGroup = studentGroupRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("Student group with id: " + id + " not found"));
         studentGroupMapper.updateFromPatch(request, studentGroup);
         studentGroupRepository.save(studentGroup);
         return studentGroupMapper.toResponse(studentGroup);
